--- a/portal/templates/portal/plan_startup_detail.html
+++ b/portal/templates/portal/plan_startup_detail.html
@@ -15,9 +15,9 @@
         <div class="row col-md-6">
             <h1 style="margin-left:10px">{{plan_cat.name}}</h1>
             {% for plan in plans %}
-            {% if plan.price == current_user_subscription.price %}
+            {% if plan.stripe_plan_id == current_user_subscription.stripe_plan_id  %}
             <p style="margin-left:10px">{{plan.name}}: <span style="color:green; font-weight:bold">${{plan.price}}</span></p>
-            <p style="margin-left:10px; color:#ee4242; font-weight:bold; font-style:italic; font-size:20px">This is your current plan</p>
+            <p style="margin-left:10px; color:#ee4242; font-weight:bold; font-size:20px">This is your current plan</p>
             <hr style="color:black; border-color:black; background-color:black">
             {% else %}
             <p style="margin-left:10px">{{plan.name}}: <span style="color:green; font-weight:bold">${{plan.price}}</span></p>
@@ -27,6 +27,7 @@
                 <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
                         data-key="{{ key }}"
                         data-description="Centinum Subscription"
+                        data-email="{{request.user.email}}"
                         data-amount="{% widthratio plan.price 1 100 %}"
                         data-locale="auto"></script>
             </form>
@@ -35,7 +36,6 @@
             {% endif %}
             {% endfor %}
             <p></p>
-
         </div>
     </div>
 </section>
