--- a/portal/templates/portal/plan_pro_detail.html
+++ b/portal/templates/portal/plan_pro_detail.html
@@ -11,23 +11,24 @@
 
 </ol>
 <section id="team" class="pb-5">
-    <div class="container">
+     <div class="container">
         <div class="row col-md-6">
             <h1 style="margin-left:10px">{{plan_cat.name}}</h1>
             {% for plan in plans %}
-            {% if plan.price == current_user_subscription.plan.price %}
+            {% if plan.stripe_plan_id == current_user_subscription.stripe_plan_id %}
             <p style="margin-left:10px">{{plan.name}}: <span style="color:green; font-weight:bold">${{plan.price}}</span></p>
-            <p style="margin-left:10px; color:#ee4242; font-weight:bold; font-style:italic; font-size:20px">This is your current plan</p>
+            <p style="margin-left:10px; color:#ee4242; font-weight:bold; font-size:20px">This is your current plan</p>
             <hr style="color:black; border-color:black; background-color:black">
             {% else %}
             <p style="margin-left:10px">{{plan.name}}: <span style="color:green; font-weight:bold">${{plan.price}}</span></p>
             {% if not plan.name == 'free'%}
-            <form action="{% url 'portal:charge' %}" method="post">
+            <form action="{% url 'portal:charge' plan.id %}" method="post">
                 {% csrf_token %}
                 <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
                         data-key="{{ key }}"
-                        data-description="Centinum Payment"
-                        data-amount="3500"
+                        data-description="Centinum Subscription"
+                        data-email="{{request.user.email}}"
+                        data-amount="{% widthratio plan.price 1 100 %}"
                         data-locale="auto"></script>
             </form>
             <hr style="color:black; border-color:black; background-color:black">
@@ -35,7 +36,6 @@
             {% endif %}
             {% endfor %}
             <p></p>
-
         </div>
     </div>
 </section>
