--- a/account/templates/account/profile_detail.html
+++ b/account/templates/account/profile_detail.html
@@ -29,7 +29,11 @@
                             <!--&nbsp;&nbsp;&nbsp;-->
                             <!--<li><a href="#" class="profile-dribbble-icon"><i-->
                                     <!--class="ti ti-dribbble"></i></a></li>-->
+                            {% if current_user_subscription == 'Free' or current_user_subscription == 'Startup' %}
+                            <a href="{% url 'portal:plans' %}">Upgrade to be able to send messages</a>
+                            {% else %}
                             <a href="{% url 'account:chat' user_profile.user %}" class="btn btn-primary" style="border-radius:20px"> Message</a>
+                            {% endif %}
                         </ul>
                     </div>
                 </div><!-- panel -->
@@ -41,11 +45,15 @@
                             <!--class="ti ti-plus"></i>Add a new Start up</a>-->
                     <a href="#tab-biz" role="tab" data-toggle="tab" class="list-group-item"><i
                             class="ti ti-view-list-alt"></i> Business start ups</a>
+                    <a href="#tab-biz-direct" role="tab" data-toggle="tab" class="list-group-item"><i
+                            class="ti ti-view-list-alt"></i> Direct Investments</a>
                     {% elif user_profile.user.is_innovator %}
                     <!--<a href="#tab-add" role="tab" data-toggle="tab" class="list-group-item"><i-->
                             <!--class="ti ti-plus"></i>Add a new Idea</a>-->
                     <a href="#tab-idea" role="tab" data-toggle="tab" class="list-group-item"><i
                             class="ti ti-view-list-alt"></i>Ideas</a>
+                    <a href="#tab-idea-direct" role="tab" data-toggle="tab" class="list-group-item"><i
+                            class="ti ti-view-list-alt"></i> Direct Investments</a>
                     {% endif %}
                     <!--<a href="#tab-edit" role="tab" data-toggle="tab" class="list-group-item"><i-->
                             <!--class="ti ti-pencil"></i> Edit Profile</a>-->
@@ -64,11 +72,13 @@
                                 <div class="table-responsive">
                                     <table class="table m-n">
                                         <thead>
+                                        {% if biz_investments %}
                                         <tr>
                                             <th style="font-size:20px;font-weight:bold">Start up name</th>
                                             <th style="font-size:20px;font-weight:bold">Pitch</th>
                                             <th style="font-size:20px;font-weight:bold">Status</th>
                                         </tr>
+                                        {% endif %}
                                         </thead>
                                         <tbody>
                                         {% for biz_invest in biz_investments %}
@@ -91,6 +101,104 @@
                         </div>
                     </div> <!-- #tab-projects -->
 
+                     <div class="tab-pane" id="tab-idea-direct">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h2>Direct Investments</h2>
+                            </div>
+                            <div class="panel-body">
+                                <div class="table-responsive">
+                                    <table class="table m-n">
+                                        <thead>
+                                        {% if idea_direct_investments %}
+                                        <tr>
+                                            <th style="font-size:20px;font-weight:bold">Idea name</th>
+                                            <th style="font-size:20px;font-weight:bold">Financing am looking for</th>
+                                            <th style="font-size:20px;font-weight:bold">Minimum Financing</th>
+                                            <th style="font-size:20px;font-weight:bold">Stake am giving up in (%) percentage</th>
+                                            <th style="font-size:20px;font-weight:bold">Number of investors</th>
+                                        </tr>
+                                        {% endif %}
+                                        </thead>
+                                        <tbody>
+                                        {% for biz_invest in idea_direct_investments %}
+                                        <tr>
+                                            <td><strong><a href="{{biz_invest.idea.get_absolute_url}}">{{biz_invest.idea}}</a></strong></td>
+                                            <td>
+                                               {{biz_invest.financing_you_are_looking_for}}
+                                            </td>
+                                            <td>
+                                               {{biz_invest.minimum_financing}}
+                                            </td>
+                                            <td>
+                                               {{biz_invest.stake_you_are_giving_up}}
+                                            </td>
+                                            <td>
+                                               {{biz_invest.number_of_investors}}
+                                            </td>
+                                            <td>
+                                                <a href="{% url 'portal:direct_idea_invest' biz_invest.id %}" class="btn btn-danger">Invest</a>
+                                            </td>
+                                        </tr>
+                                        {% empty %}
+                                        <p>This user doesn't have any direct investment ideas</p>
+                                        {% endfor %}
+                                        </tbody>
+                                    </table>
+                                </div><!-- /.table-responsive -->
+                            </div> <!-- /.panel-body -->
+                        </div>
+                    </div> <!-- #tab-projects -->
+
+                    <div class="tab-pane" id="tab-biz-direct">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h2>Direct Investments</h2>
+                            </div>
+                            <div class="panel-body">
+                                <div class="table-responsive">
+                                    <table class="table m-n">
+                                        <thead>
+                                        {% if biz_direct_investments %}
+                                        <tr>
+                                            <th style="font-size:20px;font-weight:bold">Business name</th>
+                                            <th style="font-size:20px;font-weight:bold">Financing am looking for</th>
+                                            <th style="font-size:20px;font-weight:bold">Minimum Financing</th>
+                                            <th style="font-size:20px;font-weight:bold">Stake am giving up in (%) percentage</th>
+                                            <th style="font-size:20px;font-weight:bold">Number of investors</th>
+                                        </tr>
+                                        {% endif %}
+                                        </thead>
+                                        <tbody>
+                                        {% for biz_invest in biz_direct_investments %}
+                                        <tr>
+                                            <td><strong><a href="{{biz_invest.business.get_absolute_url}}">{{biz_invest.business}}</a></strong></td>
+                                            <td>
+                                               {{biz_invest.financing_you_are_looking_for}}
+                                            </td>
+                                            <td>
+                                               {{biz_invest.minimum_financing}}
+                                            </td>
+                                            <td>
+                                               {{biz_invest.stake_you_are_giving_up}}
+                                            </td>
+                                            <td>
+                                               {{biz_invest.number_of_investors}}
+                                            </td>
+                                            <td>
+                                                <a href="{% url 'portal:direct_biz_invest' biz_invest.id %}" class="btn btn-danger">Invest</a>
+                                            </td>
+                                        </tr>
+                                        {% empty %}
+                                        <p>This user doesn't have any direct investment start ups</p>
+                                        {% endfor %}
+                                        </tbody>
+                                    </table>
+                                </div><!-- /.table-responsive -->
+                            </div> <!-- /.panel-body -->
+                        </div>
+                    </div> <!-- #tab-projects -->
+
                     <div class="tab-pane" id="tab-idea_invest">
                         <div class="panel panel-default">
                             <div class="panel-heading">
@@ -100,11 +208,13 @@
                                 <div class="table-responsive">
                                     <table class="table m-n">
                                         <thead>
+                                        {% if investments %}
                                         <tr>
                                             <th style="font-size:20px;font-weight:bold">Idea name</th>
                                             <th style="font-size:20px;font-weight:bold">Description</th>
                                             <th style="font-size:20px;font-weight:bold">Status</th>
                                         </tr>
+                                        {% endif %}
                                         </thead>
                                         <tbody>
                                         {% for idea_invest in investments %}
@@ -137,10 +247,12 @@
                                 <div class="table-responsive">
                                     <table class="table m-n">
                                         <thead>
+                                        {% if startups %}
                                         <tr>
                                             <th style="font-size:20px;font-weight:bold">Start up name</th>
                                             <th style="font-size:20px;font-weight:bold">Pitch</th>
                                         </tr>
+                                        {% endif %}
                                         </thead>
                                         <tbody>
                                         {% for start in startups %}
@@ -178,10 +290,12 @@
                                 <div class="table-responsive">
                                     <table class="table m-n">
                                         <thead>
+                                        {% if ideas %}
                                         <tr>
                                             <th style="font-size:20px;font-weight:bold">Idea Name</th>
                                             <th style="font-size:20px;font-weight:bold">Description</th>
                                         </tr>
+                                        {% endif %}
                                         </thead>
                                         <tbody>
                                         {% for idea in ideas %}
