--- a/portal/templates/portal/biz_members_search.html
+++ b/portal/templates/portal/biz_members_search.html
@@ -25,10 +25,10 @@
         {% empty %}
         <p>There are no results for your query.</p>
         {% endfor %}
-        <p><a href="{% url 'portal:search' business.id  %}">Search again</a></p>
+        <p><a href="{% url 'portal:biz_search' business.id  %}">Search again</a></p>
         {% else %}
         <h1>Search for a user</h1>
-        <form action="." method="get">
+        <form action="{% url 'portal:biz_search' business.id %}" method="get">
             {{ form|crispy }}
             <input type="submit" class="btn btn-primary" value="Search">
         </form>
