--- a/portal/templates/portal/group_chat.html
+++ b/portal/templates/portal/group_chat.html
@@ -2,9 +2,10 @@
 
 {% block title %} Chats {% endblock %}
 
-{% block body %}
 {% load static %}
 {% load crispy_forms_tags %}
+
+{% block body %}
 <ol class="breadcrumb">
 
     <li class=""><a href="{% url 'portal:home' %}">Home</a></li>
@@ -25,7 +26,7 @@
     </div>
     {% endif %}
     {% endfor %}
-    {% endif
+    {% endif %}
 <style>
 .container {
   border: 2px solid #dedede;
